fix: alignment

--- a/styles/siteplan.css
+++ b/styles/siteplan.css
@@ -22,6 +22,7 @@ header {
     color: var(--dark-bg);
     padding: 1rem;
     border-radius: 0 0 10px 10px;
+    text-align: center;
 }
 
 section {
